<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProjectGabi</string>
    <string name="expense">Expense</string>
    <string name="transaction">Transaction</string>
    <string name="revenue">revenue</string>
    <string name="value">value</string>
    <string name="description">Description</string>
    <string name="welcome_message">Welcome, %s!</string>
    <string name="Income" />
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwordTestScope">password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="additional_acccount_information">Additional acccount information</string>
    <string name="this_is_a_very_important_piece_on_info">this is a very important piece on info</string>
    <string name="import_data_from_excel">Import data from excel</string>
    <string name="transactions">Transactions</string>
    <string name="add_a_new_transaction">Add a new Transaction</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="bank_name">Bank Name</string>
    <string name="balance">Balance</string>
    <string name="currency">Currency</string>


    <string-array name="meta_categories">
        <item>"Frequent"</item>
        <item>"Non-frequent"</item>
        <item>"Savings and Investments"</item>
        <item>"Other"</item>
    </string-array>

    <string-array name="spinner_category_list">
        <item>"Mortgage/Rent"</item>
        <item>"Electricity"</item>
        <item>"Water"</item>
        <item>"Phone bills"</item>
        <item>"Cable-Internet Subscription"</item>

        <item>"Food"</item>
        <item>"Pets"</item>
        <item>"Car"</item>
        <item>"Clothes"</item>
        <item>"Health"</item>
        <item>"Going out"</item>
        <item>"Entertainment"</item>
        <item>"Other"</item>

        <item>"Savings"</item>
        <item>"Investments"</item>

    </string-array>

    <string-array name="spinnner_currencies">
        <item>"Dollars"</item>
        <item>"Euros"</item>
        <item>"Ron"</item>
        <item>"Lev"</item>
        <item>"Yen"</item>
    </string-array>

</resources>