<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tooltipText="bank account">

    <TextView
        android:id="@+id/loginAppNameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:bufferType="editable"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/add_a_new_transaction"
        android:textAllCaps="false"
        android:textColor="@color/text_font_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits" />

    <RadioGroup
        android:id="@+id/transactionTypeToggle"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/pink_out_line"
        android:checkedButton="@+id/transactionExpenseType"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAppNameTv"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/transactionExpenseType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/expense"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/transactionRevenueType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_widget_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/Income"
            android:textColor="@color/black" />
    </RadioGroup>

    <EditText
        android:id="@+id/transactionDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:text="Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionTypeToggle"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/transactionCategorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/spinner_category_list"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionDescriptionEditText"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transactionValueInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionCategorySpinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transactionValueEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:numeric="signed|integer|decimal"
            android:phoneNumber="false"
            android:text="100"
            tools:ignore="Deprecated"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="316dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/transactionAccountSpin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:tooltipText="choose a bank account "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- Existing layout... -->

    <!-- Rest of the layout... -->

    <Button
        android:id="@+id/transactionPickDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pick_a_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionAccountSpin" />

    <Button
        android:id="@+id/transactionCancellingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="cancel"
        app:layout_constraintEnd_toStartOf="@+id/transactionSavingButton"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionPickDateBtn" />

    <Button
        android:id="@+id/transactionSavingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:text="save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionPickDateBtn" />

    <Button
        android:id="@+id/transactionImportBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/import_data_from_excel"
        android:onClick="openFileExplorer"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionSavingButton">

    </Button>

    <TextView
        android:id="@+id/textView"
        android:layout_width="262dp"
        android:layout_height="23dp"
        android:layout_marginTop="52dp"
        android:text="Choose a bank account"
        android:textColor="@color/text_font_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionValueInput" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="(or leave the current one)"
        android:textColor="@color/text_font_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionPickDateBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
